fix: Calendars on mobile

--- a/css/book.css
+++ b/css/book.css
@@ -9,27 +9,32 @@
 .calendar-group {
     width: 100%;
     height: fit-content;
-    padding: 10px 24px;
+    padding: 24px;
     background: var(--action-contrast-color);
     border-radius: 24px;
     border: 1px solid var(--standard-border-color);
-    gap: 10px;
+    gap: 20px;
 }
 
 .calendar-group input,
 .calendar-group .dropdown-toggle {
     color: var(--header-link-color);
     width: 100%;
-    padding: 40px 0 20px;
-    border-radius: 0;
+    padding: 12px;
+    border-radius: 10px;
+    outline: 1px solid var(--standard-border-dark);
     border: none;
-    outline: none;
     background-color: var(--action-contrast-color);
     cursor: pointer;
 }
 
 .calendar-group input::placeholder {
     color: var(--header-link-color);
+}
+
+.calendar-group input:focus,
+.calendar-group .dropdown-toggle:focus {
+    outline: 2px solid var(--black-color);
 }
 
 @media (min-width: 768px) {
@@ -44,16 +49,8 @@
     .calendar-group .dropdown-toggle {
         padding: 32px 46px 14px 20px;
         border-radius: 32px;
-    }
-
-    .calendar-group input:hover,
-    .calendar-group .dropdown-toggle:hover {
-        background-color: var(--standard-hover-color);
-    }
-
-    .calendar-group input:focus,
-    .calendar-group .dropdown-toggle:focus {
-        outline: 2px solid var(--black-color);
+        outline: none;
+        margin: 0;
     }
 }
 
@@ -64,14 +61,22 @@
     }
 }
 
+@media (min-width: 1200px) {
+        .calendar-group input:hover,
+        .calendar-group .dropdown-toggle:hover {
+            background-color: var(--standard-hover-color);
+        }
+}
+
 .calendar-group .label-container {
-    position: absolute;
-    margin-top: 10px;
+    position: relative;
+    margin-bottom: 10px;
 }
 
 @media (min-width: 768px) {
     .calendar-group .label-container {
-        margin-left: 20px;
+        position: absolute;
+        margin: 14px 0 0 20px;
     }
 }
 
@@ -87,13 +92,12 @@
 
 .location-box {
     display: none;
-    cursor: default;
+    cursor: pointer;
 }
 
 @media (min-width: 1200px) {
     .location-box {
         display: block;
-        width: 25%;
         padding-right: 0.25rem;
     }
 
@@ -106,11 +110,6 @@
     }
 }
 
-.calendar-box {
-    cursor: pointer;
-    width: 100%;
-}
-
 @media (min-width: 768px) {
     .arrival-inner {
         padding-right: 0.25rem;
@@ -121,18 +120,8 @@
     }
 }
 
-@media (min-width: 1200px) {
-    .calendar-box {
-        width: 50%;
-    }
-
-    .guests-box {
-        width: 25%;
-    }
-}
-
 .calendar-group .dropdown-menu {
-    width: 260px;
+    width: 100%;
     padding: 0 14px;
     border-radius: 24px;
     border: none;
